# chip-8

./: Cargo.toml  README.md  justfile
js/: io.ts
src/: clock.rs  display.rs  gpu.rs  io.rs  keyboard.rs  lib.rs  main.rs  memory.rs  programs.rs
src/io/: mod.rs  terminal_io.rs  web_io.rs
web/: bun.lockb  nuxt.config.ts  package.json
web/components/: display.vue
web/composables/: emulator.ts  useEmulator.ts
web/pages/: index.vue
web/utils/: keyMappings.ts
