[package]
name = "chip-8"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-std = "1.13.0"
crossterm = { version = "0.28.1", features = ["event-stream"], optional = true }
wasm-bindgen = { version = "0.2.95", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3.72", features = ["console"] }
web-time = "1.1.0"
strum = { version = "0.26", features = ["derive"] }

[features]
default = ["wasm", "cli"]
wasm = ["dep:wasm-bindgen"]
cli = ["dep:crossterm"]
