[package]
name = "chip-8"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-std = "1.13.0"
crossterm = { version = "0.28.1", features = ["event-stream"], optional = true }
wasm-bindgen = { version = "0.2.95", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
web-sys = { version = "0.3.72", features = ["console"], optional = true }
web-time = { version = "1.1.0", optional = true }

strum = { version = "0.26", features = ["derive"] }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["wasm", "cli"]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:web-sys", "dep:web-time"]
cli = ["dep:crossterm"]
